--- a/TestProjectFrutas/TestProjectFrutas.csproj
+++ b/TestProjectFrutas/TestProjectFrutas.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ClassLibraryFrutas\ClassLibraryFrutas.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
